@@ -9,10 +9,12 @@
 
 ### 改良
 * CA証明書を追加
-  新たにRoot CA証明書`VeriSign Class 3 Public Primary CA - G2'を内蔵し
-  ました。この証明書は`api.twitter.com'のサーバ認証で参照されます。以
-  前から内蔵されている証明書`Equifax Secure Certificate Authority'は
-  `search.twitter.com'のサーバ認証でのみ参照されるようになりました。
+  新たにRoot CA証明書`VeriSign Class 3 Public Primary CA - G2'と
+  `GeoTrust Global CA'を内蔵しました。これらの証明書はそれぞれ、
+  `api.twitter.com'と`search.twitter.com'のサーバ認証で参照されます。
+  以前から内蔵されている証明書`Equifax Secure Certificate Authority'は
+  URI短縮に用いる`www.googleapis.com'のサーバ認証でのみ参照されるよう
+  になりました。
 
 ### バグ修正
 * 認証成功・失敗についてのメッセージが表示されるよう修正
